--- a/Aula 3/Exemplos/ex1.tex
+++ b/Aula 3/Exemplos/ex1.tex
@@ -3,20 +3,24 @@
 \usepackage[utf8]{inputenc}
 \usepackage[brazilian]{babel}
 
-\title{Dados sobre pessoas que viraram patos}
-\author{João da Silva}
+\title{Pequeno exemplo}
+\author{Richard M. Stallman}
 
 \begin{document}
 
   \maketitle
 
-  \begin{tabular}{l c r}
-    Ano & Número de pessoas que viraram patos & Pessoas felizes\\
-    1990 & 101 & 550\\
-    2000 & 557 & 2001\\
-    2010 & 2734 & 17987\\
-  \end{tabular}
-  \\[2cm]
-  \textbf{Obs:} o número de pessoas felizes é maior que o número de pessoas que se tornaram patos, pois os familiares das pessoas que se tornaram patos também ficaram felizes. Se tornar um pato é algo bom para toda a sociedade!
+  \begin{flushright}
+    \huge \textit{Patos!}
+  \end{flushright}
+  \bigskip
+
+  {\small \textsc{Patos!}}
+  \pagebreak
+
+  \begin{center}
+    \Huge \textbf{Patos}
+  \end{center}
+
 
 \end{document}
