--- a/Aula 3/Exemplos/ex2.tex
+++ b/Aula 3/Exemplos/ex2.tex
@@ -3,32 +3,20 @@
 \usepackage[utf8]{inputenc}
 \usepackage[brazilian]{babel}
 
-\title{Listas}
-\author{Ada Lovelace}
+\title{Dados sobre pessoas que viraram patos}
+\author{João da Silva}
 
 \begin{document}
 
   \maketitle
 
-  Alguns fatos sobre patos:
-
-  \begin{enumerate}
-    \item Patos são legais
-    \item Patos são elegantes
-    \item Há patos de várias cores:
-    \begin{enumerate}
-      \item Amerelo
-      \item Preto
-      \item Marrom
-    \end{enumerate}
-  \end{enumerate}
-
-  Vamos agora listar algumas coisas que vão acontecer com você se você se tornar um pato:
-
-  \begin{itemize}
-    \item Você vai ser feliz
-    \item Você vai ser amado
-    \item Você vai ter muitos amigos, pois todos gostam de patos
-  \end{itemize}
+  \begin{tabular}{l c r}
+    Ano & Número de pessoas que viraram patos & Pessoas felizes\\
+    1990 & 101 & 550\\
+    2000 & 557 & 2001\\
+    2010 & 2734 & 17987\\
+  \end{tabular}
+  \\[2cm]
+  \textbf{Obs:} o número de pessoas felizes é maior que o número de pessoas que se tornaram patos, pois os familiares das pessoas que se tornaram patos também ficaram felizes. Se tornar um pato é algo bom para toda a sociedade!
 
 \end{document}
