Nomeclatura dos exemplos

--- a/Aula 3/aula3.tex
+++ b/Aula 3/aula3.tex
@@ -202,7 +202,7 @@
 
 \begin{frame}[fragile]
 
-  \textbf{Exercício: } Inclua a imagem \emph{duck.jpg} no Exemplo 3 de forma a obter um resultado semelhante ao arquivo \emph{ex3.1.pdf}\\
+  \textbf{Exercício: } Inclua a imagem \emph{duck.jpg} no Exemplo 3 de forma a obter um resultado semelhante ao PDF do Exemplo 3.1\\
   \bigskip
   \pause
   \textbf{Solução: }
