--- a/Aula 4/aula4.tex
+++ b/Aula 4/aula4.tex
@@ -55,8 +55,11 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  Vamos fazer um exemplo! (Exemplo 1)
+\begin{frame}[fragile]
+  \begin{itemize}
+    \item A raiz é feita com o comando \verb+\sqrt{}+. A opção \verb+[n]+ pode ser adicionada para fazer a raiz $n$-ésima.
+    \item Vamos fazer um exemplo! (Exemplo 1)
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Símbolos}
@@ -134,7 +137,7 @@
 
 \begin{frame}[fragile]
   \begin{itemize}
-    \item Alguns comandos como \verb+\sin+, \verb+\cos+, \verb+\lim+ estão definidos no \LaTeX, para não serem exibidos em itálico, e no caso de \verb+\lim+, para se adicionar o subescrito embaixo
+    \item Alguns comandos como \verb+\sin+, \verb+\cos+, \verb+\lim+, \verb+\log+ estão definidos no \LaTeX, para não serem exibidos em itálico, e no caso de \verb+\lim+, para se adicionar o subescrito \verb+x \to \infty+ embaixo
     \item Há muitos recursos no modo matemático, e tentamos falar sobre o máximo possível deles, mas não dá pra falar de tudo. Dê uma olhada em \url{en.wikibooks.org/wiki/LaTeX/Mathematics},
     pois a página está bem completa.
     \item Veja o Exemplo 4!
