Corrigi um erro fatal de não escrever LaTeX do jeito elegante

--- a/Aula 4/aula4.tex
+++ b/Aula 4/aula4.tex
@@ -29,7 +29,7 @@
 
 \begin{frame}{Introdução}
   \section{Sobre o modo matemático}
-  Para se adicionar equações e fórmulas matemáticas no latex, existe um ambiente dedicado a isso, com comandos específicos que só funcionam quando você está nesse ambiente. Além disso, todas as letras digitadas dentro desse ambiente serão colocadas em itálico, que é o padrão para variáveis matemáticas.
+  Para se adicionar equações e fórmulas matemáticas no \LaTeX, existe um ambiente dedicado a isso, com comandos específicos que só funcionam quando você está nesse ambiente. Além disso, todas as letras digitadas dentro desse ambiente serão colocadas em itálico, que é o padrão para variáveis matemáticas.
   \\[1cm]
   Mas existem várias formas de se entrar no ambiente matemático, e elas produzem resultados diferentes no documento. Vamos mostrá-las agora.
 \end{frame}
