--- a/Aula 4/aula4.tex
+++ b/Aula 4/aula4.tex
@@ -68,8 +68,8 @@
   A quantidade de símbolos disponíveis para se utilizar no modo matemático é extremamente grande, e não vamos gastar o tempo para mostrando um por um. Mas vamos passar alguns links de páginas com tabelas e listas de símbolos, para que você possa procurar aqueles que você deseja usar. Algumas páginas que julgamos serem boas são:
 
   \begin{itemize}
-    \item \url{http://latex.wikia.com/wiki/List_of_LaTeX_symbols}
-    \item \url{https://oeis.org/wiki/List_of_LaTeX_mathematical_symbols}
+    \item \url{latex.wikia.com/wiki/List_of_LaTeX_symbols}
+    \item \url{oeis.org/wiki/List_of_LaTeX_mathematical_symbols}
   \end{itemize}
 \end{frame}
 
