--- a/Aula 5/aula5.tex
+++ b/Aula 5/aula5.tex
@@ -27,6 +27,15 @@
   \tableofcontents
 \end{frame}
 
+\begin{frame}{Fontes}
+  \section{Fontes}
+  \begin{itemize}
+    \item Primeiramente, vamos ensinar a mudar a fonte padrão do \LaTeX! Como o padrão para fontes do \LaTeX\ (o METAFONT) é diferente do padrão da maioria dos editores de texto, nem todas as fontes estão disponíveis.
+    \item Cada fonte tem um jeito específico de ser adicionada, e geralmente isso envolve adicionar pacotes extras.
+    \item A página \url{www.tug.dk/FontCatalogue/} lista as fontes disponíveis no \LaTeX\ e explica como adicionar cada uma.
+    \item Ver Exemplo 1!
+  \end{itemize}
+\end{frame}
 
 \begin{frame}
   \begin{center}
