--- a/Aula 5/aula5.tex
+++ b/Aula 5/aula5.tex
@@ -37,6 +37,25 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Bibliografia}
+  \section{Bibliografia}
+\end{frame}
+
+\begin{frame}[fragile]{Footnotes}
+  \section{Footnotes}
+
+  Para adicionar notas de rodapé, basta usar o comando \verb+\footnote{}+ no lugar em que você quer que apareça o número, e com a nota como entrada.
+\end{frame}
+
+\begin{frame}[fragile]{Links}
+  \section{Links}
+  Para adicionar links, basta adionar o pacote \verb+hyperref+,
+\end{frame}
+
+\begin{frame}{Teoremas}
+  \section{Teoremas}
+\end{frame}
+
 \begin{frame}
   \begin{center}
     \large Obrigado!\\
