--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -9,7 +9,7 @@
 
 \title{Mini-Curso de \LaTeX\ \\ Aula 01 - Introdução}
 \author{Fábio Meneghetti \and Pedro Caetano}
-\date{28 de março de 2016}
+\date{11 de outubro de 2016}
 
 \begin{document}
 \begin{frame}
@@ -42,7 +42,7 @@
 
 \begin{frame}
   \frametitle{Exemplos}
-  Fábio, mostre exemplos de documentos feitos no \LaTeX, para motivar os alunos!
+  Mostre exemplos de documentos feitos no \LaTeX, para motivar os alunos!
 \end{frame}
 
 \begin{frame}{Instalação}
