--- a/Aula 2/aula2.tex
+++ b/Aula 2/aula2.tex
@@ -9,7 +9,7 @@
 
 \title{Mini-Curso de \LaTeX\ \\ Aula 02 - Formatação}
 \author{Fábio Meneghetti \and Pedro Caetano}
-\date{29 de março de 2016}
+\date{13 de outubro de 2016}
 
 \begin{document}
 \begin{frame}
