--- a/Aula 3/aula3.tex
+++ b/Aula 3/aula3.tex
@@ -9,7 +9,7 @@
 
 \title{Mini-Curso de \LaTeX\ \\ Aula 03 - Mais Formatação, Tabelas e Imagens}
 \author{Fábio Meneghetti \and Pedro Caetano}
-\date{4 de abril de 2016}
+\date{18 de outubro de 2016}
 
 \begin{document}
 \begin{frame}
