--- a/Aula 4/aula4.tex
+++ b/Aula 4/aula4.tex
@@ -9,7 +9,7 @@
 
 \title{Mini-Curso de \LaTeX\ \\ Aula 04 - Matemática}
 \author{Fábio Meneghetti \and Pedro Caetano}
-\date{5 de abril de 2016}
+\date{20 de outubro de 2016}
 
 \begin{document}
 \begin{frame}
