--- a/Aula 5/aula5.tex
+++ b/Aula 5/aula5.tex
@@ -9,7 +9,7 @@
 
 \title{Mini-Curso de \LaTeX\ \\ Aula 05 - Fontes, Bibliografia, Links e Notas}
 \author{Fábio Meneghetti \and Pedro Caetano}
-\date{11 de abril de 2016}
+\date{25 de outubro de 2016}
 
 \begin{document}
 \begin{frame}
